@@ -1,7 +1,7 @@
 # EL distro example
 FROM docker.io/almalinux:9
 
-# Install Python to run the `custom-resolver.py` script
+# Install Python to run the custom resolver scripts
 RUN yum install -y python3
 
 # Install latest release of libnss_shim available for this architecture
@@ -10,8 +10,14 @@ RUN rpm -Ui libnss_shim*.rpm
 RUN rm libnss_shim*.rpm
 
 # Import config and scripts
-COPY custom_config.json /etc/libnss_shim/config.json
-COPY custom-resolver.py /etc/libnss_shim/resolver.py
+COPY --chown=root:root custom_config.json /etc/libnss_shim/config.json
+RUN chmod 644 /etc/libnss_shim/config.json
+COPY --chown=root:root custom-group-resolver.py /etc/libnss_shim/group-resolver.py
+RUN chmod 644 /etc/libnss_shim/group-resolver.py
+COPY --chown=root:root custom-passwd-resolver.py /etc/libnss_shim/passwd-resolver.py
+RUN chmod 644 /etc/libnss_shim/passwd-resolver.py
+COPY --chown=root:root custom-shadow-resolver.py /etc/libnss_shim/shadow-resolver.py
+RUN chmod 640 /etc/libnss_shim/shadow-resolver.py
 
 # Run bash by default
 ENTRYPOINT ["/bin/bash"]
