@@ -3,16 +3,16 @@
     "group": {
       "functions": {
         "get_all_entries": {
-          "command": "python3 /etc/libnss_shim/resolver.py --group --all"
+          "command": "python3 /etc/libnss_shim/group-resolver.py --all"
         },
         "get_entry_by_gid": {
-          "command": "python3 /etc/libnss_shim/resolver.py --group --id",
+          "command": "python3 /etc/libnss_shim/group-resolver.py --id",
           "env": {
             "LIBNSS_SHIM_GROUP_ID": "<$gid>"
           }
         },
         "get_entry_by_name": {
-          "command": "python3 /etc/libnss_shim/resolver.py --group --name",
+          "command": "python3 /etc/libnss_shim/group-resolver.py --name",
           "env": {
             "LIBNSS_SHIM_GROUP_NAME": "<$name>"
           }
@@ -22,16 +22,16 @@
     "passwd": {
       "functions": {
         "get_all_entries": {
-          "command": "python3 /etc/libnss_shim/resolver.py --passwd --all"
+          "command": "python3 /etc/libnss_shim/passwd-resolver.py --all"
         },
         "get_entry_by_uid": {
-          "command": "python3 /etc/libnss_shim/resolver.py --passwd --id",
+          "command": "python3 /etc/libnss_shim/passwd-resolver.py --id",
           "env": {
             "LIBNSS_SHIM_PASSWD_ID": "<$uid>"
           }
         },
         "get_entry_by_name": {
-          "command": "python3 /etc/libnss_shim/resolver.py --passwd --name",
+          "command": "python3 /etc/libnss_shim/passwd-resolver.py --name",
           "env": {
             "LIBNSS_SHIM_PASSWD_NAME": "<$name>"
           }
@@ -41,10 +41,10 @@
     "shadow": {
       "functions": {
         "get_all_entries": {
-          "command": "python3 /etc/libnss_shim/resolver.py --shadow --all"
+          "command": "python3 /etc/libnss_shim/shadow-resolver.py --all"
         },
         "get_entry_by_name": {
-          "command": "python3 /etc/libnss_shim/resolver.py --shadow --name",
+          "command": "python3 /etc/libnss_shim/shadow-resolver.py --name",
           "env": {
             "LIBNSS_SHIM_SHADOW_NAME": "<$name>"
           }
