@@ -1,9 +1,11 @@
+- Adjust default permission of `config.json` to 644
+- Add note to README about script permissions for users (`group`/`passwd` OK public, `shadow` best private)
+- Migrate to a single configurable build script with CPU architecture detection
 - Bump `cargo-deb` to `2.2.0`
 - Following that upgrade, deb packages will have a `-1` version suffix to match RPM
-- Bump ubuntu build container to `22.04`
+- Bump ubuntu build container to `24.04`
 - Bump `actions/checkout` to `v4`
 - Bump `softprops/action-gh-release` to `v2`
-- Single configurable build script with architecture detection
 - Improve install documentation
 - Add package table to README
 - Document install test command from GIF in README
